leaderboards and mappools API query efficiency improvements